Pujada d'arxius README.md redactat
README.md modificat i primera proba a veure com queda, apunt de finalitzar  la redacció

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1178,7 +1178,7 @@
    "id": "e652f613",
    "metadata": {},
    "source": [
-    "<h3>Implementació del MLP amb els millors paramentres</h3>"
+    "<h3>Implementació del MLP amb els millors paràmentres</h3>"
    ]
   },
   {
@@ -1243,18 +1243,6 @@
     "plt.title('Resultats Finals')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57ef884e",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "186e99c3",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
