README.md de moment acabat

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "id": "f1c9e3db",
    "metadata": {
     "scrolled": true
@@ -40,6 +40,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import time\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import svm, datasets\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "id": "968af8a1",
    "metadata": {
     "scrolled": true
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "dc17e922",
    "metadata": {},
    "outputs": [
@@ -240,7 +241,7 @@
        "stabf       0  0.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "id": "bc518573",
    "metadata": {},
    "outputs": [
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "id": "baa61222",
    "metadata": {
     "scrolled": true
@@ -516,7 +517,7 @@
        "[29998 rows x 10 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "id": "7b83feac",
    "metadata": {},
    "outputs": [
@@ -683,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "id": "6cc0498e",
    "metadata": {},
    "outputs": [
@@ -899,7 +900,7 @@
        "[29998 rows x 10 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "id": "3f74f38e",
    "metadata": {},
    "outputs": [],
@@ -947,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "id": "aa0ee6e0",
    "metadata": {},
    "outputs": [],
@@ -971,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "id": "d4bbd2d6",
    "metadata": {},
    "outputs": [
@@ -980,16 +981,16 @@
      "output_type": "stream",
      "text": [
       "Logistic amb dataTotal i particio sobre el dataset\n",
-      "Accuracy Logistic:  0.9101851851851852  amb el  0.1  del dataset\n",
-      "Accuracy Logistic:  0.9505476190476191  amb el  0.3  del dataset\n",
-      "Accuracy Logistic:  0.9671666666666666  amb el  0.5  del dataset\n",
-      "Accuracy Logistic:  0.9768333333333333  amb el  0.8  del dataset\n",
+      "Accuracy Logistic:  0.916074074074074  amb el  0.1  del dataset\n",
+      "Accuracy Logistic:  0.9559761904761904  amb el  0.3  del dataset\n",
+      "Accuracy Logistic:  0.9661666666666666  amb el  0.5  del dataset\n",
+      "Accuracy Logistic:  0.9770833333333333  amb el  0.8  del dataset\n",
       "\n",
       "Logistic amb dataTest i particio sobre el data set\n",
-      "Accuracy Logistic:  0.8771806363198636  amb el  0.1  del dataset\n",
-      "Accuracy Logistic:  0.9335682651554836  amb el  0.3  del dataset\n",
-      "Accuracy Logistic:  0.9499299953330222  amb el  0.5  del dataset\n",
-      "Accuracy Logistic:  0.9595  amb el  0.8  del dataset\n"
+      "Accuracy Logistic:  0.8865883921626727  amb el  0.1  del dataset\n",
+      "Accuracy Logistic:  0.9262822039144721  amb el  0.3  del dataset\n",
+      "Accuracy Logistic:  0.9452630175345023  amb el  0.5  del dataset\n",
+      "Accuracy Logistic:  0.9583333333333334  amb el  0.8  del dataset\n"
      ]
     }
    ],
@@ -1011,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "id": "c89e7c80",
    "metadata": {},
    "outputs": [],
@@ -1040,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "id": "7d04c3b5",
    "metadata": {},
    "outputs": [
@@ -1049,15 +1050,21 @@
      "output_type": "stream",
      "text": [
       "Accuracy Logistic:  0.9670978065204346\n",
+      "0.16324877738952637\n",
       "Accuracy Logistic dades escalades:  0.9670978065204346\n"
      ]
     }
    ],
    "source": [
+    "LR_time=0\n",
+    "start = time.time()\n",
     "logireg = LogisticRegression()\n",
     "logireg.fit(x_train, y_train)\n",
     "rl_score = logireg.score(x_test, y_test)\n",
     "print(\"Accuracy Logistic: \",rl_score)\n",
+    "end = time.time()\n",
+    "LR_time = LR_time + (end - start)\n",
+    "print(LR_time)\n",
     "\n",
     "logireg.fit(x_train_scaled, y_train)\n",
     "rl_score_scaled = logireg.score(x_test_scaled, y_test)\n",
@@ -1075,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 16,
    "id": "8a2d9844",
    "metadata": {},
    "outputs": [
@@ -1083,22 +1090,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy MLP:  0.9981332088805921\n",
-      "Accuracy MLP dades escalades:  0.9988332555503701\n"
+      "Accuracy MLP:  0.9988665911060738\n",
+      "18.1645028591156\n",
+      "Accuracy MLP dades escalades:  0.9981998799919994\n"
      ]
     }
    ],
    "source": [
     "\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
+    "MLP_time=0\n",
+    "start=time.time()\n",
     "mlp = MLPClassifier()\n",
     "\n",
     "mlp.fit(x_train,y_train)\n",
     "mpl_score_0 = mlp.score(x_test, y_test)\n",
     "\n",
     "print(\"Accuracy MLP: \",mpl_score_0)\n",
-    "\n",
+    "end = time.time()\n",
+    "MLP_time = MLP_time + (end - start)\n",
+    "print(MLP_time)\n",
     "mlp.fit(x_train_scaled,y_train)\n",
     "\n",
     "mlp_score_scaled_0 = mlp.score(x_test_scaled, y_test)\n",
@@ -1118,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "id": "09d6a4a9",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 18,
    "id": "9c349bb6",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy SVM 0.9545954595459546 amb 10000 files\n",
+      "Accuracy SVM 0.9571957195719571 amb 10000 files\n",
+      "0.9463696479797363\n",
       "Accuracy SVM amb dades escalades 0.637963796379638 amb 10000 files\n"
      ]
     }
@@ -1164,10 +1176,15 @@
    "source": [
     "\n",
     "from sklearn.svm import SVC\n",
+    "SVM_time=0\n",
+    "start=time.time()\n",
     "svc = SVC(C=10)\n",
     "svc.fit(x_mini_train, y_mini_train)\n",
     "svc_score = svc.score(x_mini_test, y_mini_test)\n",
     "print(\"Accuracy SVM\",svc_score,\"amb\",size,\"files\")\n",
+    "end=time.time()\n",
+    "SVM_time = SVM_time + (end - start)\n",
+    "print(SVM_time)\n",
     "svc.fit(x_mini_train_scaled, y_mini_train)\n",
     "svc_score_scaled = svc.score(x_mini_test_scaled, y_mini_test)\n",
     "print(\"Accuracy SVM amb dades escalades\",svc_score_scaled,\"amb\",size,\"files\")"
@@ -1183,15 +1200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 19,
    "id": "0bb38e3c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy MLP: 0.9977998533235549 amb alpha = 0.0001 i learning rate= 0.001\n",
+      "Accuracy MLP: 0.9988332555503701 amb alpha = 0.0001 i learning rate= 0.001\n",
+      "20.55545711517334\n",
       "Accuracy MLP scaled: 0.997099806653777 amb alpha = 0.0001 i learning rate= 0.001\n"
      ]
     }
@@ -1199,13 +1219,17 @@
    "source": [
     "a=0.0001\n",
     "lr = 0.001\n",
+    "MLPbetter_time=0\n",
+    "start=time.time()\n",
     "mlp = MLPClassifier(alpha=a,learning_rate_init=lr)\n",
     "\n",
     "mlp.fit(x_train,y_train)\n",
     "mlp_score = mlp.score(x_test, y_test)\n",
     "\n",
     "print(\"Accuracy MLP:\",mlp_score,\"amb alpha =\", a, \"i learning rate=\", lr)\n",
-    "\n",
+    "end=time.time()\n",
+    "MLPbetter_time = MLPbetter_time + (end - start)\n",
+    "print(MLPbetter_time)\n",
     "mlp.fit(x_train_scaled,y_train)\n",
     "mlp_score_scaled = mlp.score(x_test_scaled, y_test)\n",
     "\n",
