Pujada d'arxius casi definitiu

--- a/KAGGLE.ipynb
+++ b/KAGGLE.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "968af8a1",
    "metadata": {
     "scrolled": true
@@ -77,35 +77,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Per veure una mica de quin tipus són cada atribut, i  així podem saber com he de tractar aquesta informació\n",
-      "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 60000 entries, 0 to 59999\n",
-      "Data columns (total 14 columns):\n",
+      "Data columns (total 10 columns):\n",
       " #   Column  Non-Null Count  Dtype  \n",
       "---  ------  --------------  -----  \n",
       " 0   tau1    60000 non-null  float64\n",
       " 1   tau2    60000 non-null  float64\n",
       " 2   tau3    60000 non-null  float64\n",
       " 3   tau4    60000 non-null  float64\n",
-      " 4   p1      60000 non-null  float64\n",
-      " 5   p2      60000 non-null  float64\n",
-      " 6   p3      60000 non-null  float64\n",
-      " 7   p4      60000 non-null  float64\n",
-      " 8   g1      60000 non-null  float64\n",
-      " 9   g2      60000 non-null  float64\n",
-      " 10  g3      60000 non-null  float64\n",
-      " 11  g4      60000 non-null  float64\n",
-      " 12  stab    60000 non-null  float64\n",
-      " 13  stabf   60000 non-null  object \n",
-      "dtypes: float64(13), object(1)\n",
-      "memory usage: 6.4+ MB\n"
+      " 4   g1      60000 non-null  float64\n",
+      " 5   g2      60000 non-null  float64\n",
+      " 6   g3      60000 non-null  float64\n",
+      " 7   g4      60000 non-null  float64\n",
+      " 8   stab    60000 non-null  float64\n",
+      " 9   stabf   60000 non-null  int64  \n",
+      "dtypes: float64(9), int64(1)\n",
+      "memory usage: 4.6 MB\n"
      ]
     }
    ],
    "source": [
-    "print(\"Per veure una mica de quin tipus són cada atribut, i  així podem saber com he de tractar aquesta informació\")\n",
-    "print(\"\")\n",
     "dataset.info()"
    ]
   },
@@ -1025,8 +1017,6 @@
     "y_test = dataTest[\"stabf\"].values\n",
     "\n",
     "ss = StandardScaler(with_mean=False,with_std=False).fit(x_train)\n",
-    "\n",
-    "#Escalem els atributs\n",
     "x_train_scaled = ss.transform(x_train)\n",
     "x_test_scaled = ss.transform(x_test)\n"
    ]
@@ -1237,6 +1227,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81ed70c9",
+   "metadata": {},
+   "source": [
+    "<h3>Anàlisis de resultats</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "id": "7f8e7fce",
@@ -1267,6 +1265,40 @@
     "plt.title('Resultats Finals')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "301130c6",
+   "metadata": {},
+   "source": [
+    "<h3> Taula de Resultats </h3>\n",
+    "\n",
+    "| Model | Temps d'execució | Accuracy del test |\n",
+    "|-----------|:------------|:-----------:|\n",
+    "| Regressió Logística | 0.1632 s | 96.7% | \n",
+    "| MLP |18.164s | 99.8% |\n",
+    "| SVM | 0.9463 s | 95.45% |\n",
+    "| MLP amb millors paràmetres | 20.555s | 99.7% |\n",
+    "\n",
+    "\n",
+    "Un cop que ja hem obtingut els nostres resultats de les prediccionas del set de test, podem veure que els nostres models implementats per aquesta base de dades estan funcionantn molt bé, ja que estem obtenint uns valors de accuracy de més del 90%.\n",
+    "\n",
+    "M'ha sorprès molt que una base de dades com aquesta amb una correlació força normal, pugui tenir una classificació molt bona, també haig de dir que el SVM classifica bé amb la BD reduïda però amb una quantitat menor de 10000 dades, el resultat es veu bastant reduït.\n",
+    "\n",
+    "Com es pot veure en la taula, el pitjor dels casos és el SVM, que ens ha donat un accuracy força bo, però és el més baix dels 4 models. En canvim el millor model amb l'accuracy més alt ha sigut el MLP amb millors paràmetres, ja que ens ha donat un resultat de 99.7%, però una cosa que hem de tenir en compte es que el temps d'execució d'aquest model és força elevat.\n",
+    "\n",
+    "\n",
+    "I per últim dir que la regressió logística ens ha donat una classificació del 96.7% i només triga un 0.1632s en executar tot el model i classificar les dades, per tant aquest seria el model que triaria, ja que té un bon rendiment i un resultat de classificació excel·lent.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56a750e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
